# Mistria-Atlas

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/connectors/: __init__.py
backend/app/core/: __init__.py
backend/app/tasks/: __init__.py
prd/: design_backend_architecture.md  design_metadata.md  design_v1.md
